# monarch-kg-qc-schema

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml
Boolean/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
EdgeReport/: index.html
Float/: index.html
Integer/: index.html
NamedThing/: index.html
Ncname/: index.html
NodeReport/: index.html
NodeTypeReport/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PredicateReport/: index.html
Report/: index.html
ReportCollection/: index.html
String/: index.html
SubReport/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
categories/: index.html
dangling_edges/: index.html
description/: index.html
edges/: index.html
entries/: index.html
examples/: README.md  Report-001.yaml
id/: index.html
missing/: index.html
missing_nodes/: index.html
missing_object_namespaces/: index.html
missing_objects/: index.html
missing_subject_namespaces/: index.html
missing_subjects/: index.html
monarch-kg-qc-schema/: index.html
name/: index.html
namespaces/: index.html
node_types/: index.html
nodes/: index.html
predicates/: index.html
search/: search_index.json
taxon/: index.html
tests/: __init__.py  test_data.py
total_number/: index.html
uri/: index.html
(+19 files in other folders)
