[tool.poetry]
name = "monarch_kg_qc_schema"
version = "0.1.0"
description = "Schema for QC reports on the Monarch KG."
authors = ["Corey Cox. <69321580+amc-corey-cox@users.noreply.github.com>"]
license = "BSD-3"
readme = "README.md"
include = ["README.md", "src/monarch_kg_qc_schema/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]